--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "name": "EvilCat",
-  "description": "A telethon userbot based on snapdragon code(xtratgbot) .Easy to use and friendly bot . Maintained by Flora .. inspired from pro SANDEEP and JISAN. ",
+  "description": "A telethon userbot based on snapdragon code(xtratgbot) .Easy to use and friendly bot . Maintained by Flora .. inspired from SANDEEP and JISAN. ",
   "logo": "https://telegra.ph/file/5ba2c64bfc1ddebbf03e6.jpg",
   "keywords": [
     "telegram"
